crux-mir/test/symb_eval/num/checked_add.good
test checked_add/3a1fbbbh::crux_test[0]: returned 44, FAILED

failures:

---- checked_add/3a1fbbbh::crux_test[0] counterexamples ----
Failure for test/symb_eval/num/checked_add.rs:5:5: error: in checked_add/3a1fbbbh::crux_test[0]
attempt to add with overflow

[Crux] Overall status: Invalid.
